# QQGroupVerifyer

./: CMakeLists.txt  main.cpp
ExceptionHandler/: ExceptionHandler.cpp  ExceptionHandler.h
Misc/: Misc.cpp  Misc.h
